--- a/MorMap/Base.lproj/Main.storyboard
+++ b/MorMap/Base.lproj/Main.storyboard
@@ -1,26 +1,87 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ms4-hL-NhX">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--MorMap-->
+        <scene sceneID="NWN-YQ-Njx">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MorMap" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="i0g-Ii-0LG" customClass="ViewController" customModule="MorMap" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="s88-J7-nRi"/>
+                        <viewControllerLayoutGuide type="bottom" id="sit-Ce-9h0"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="lBa-Zu-d2W">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ANA-CI-KCP" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="ANA-CI-KCP" secondAttribute="trailing" constant="-20" id="HwR-9o-9st"/>
+                            <constraint firstItem="ANA-CI-KCP" firstAttribute="leading" secondItem="lBa-Zu-d2W" secondAttribute="leadingMargin" constant="-20" id="MaP-WS-xgK"/>
+                            <constraint firstItem="sit-Ce-9h0" firstAttribute="top" secondItem="ANA-CI-KCP" secondAttribute="bottom" id="p3G-gl-zCa"/>
+                            <constraint firstItem="ANA-CI-KCP" firstAttribute="top" secondItem="s88-J7-nRi" secondAttribute="bottom" id="pQm-aA-mP7"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="MorMap" id="2UI-KE-myE">
+                        <barButtonItem key="leftBarButtonItem" image="menu" id="z0K-fc-fi1"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="MapUI" destination="ANA-CI-KCP" id="gEe-e1-jaK"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nnl-gU-r9Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="289" y="909"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="h51-10-UKO">
+            <objects>
+                <viewController id="HJe-CP-L6c" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6O4-wq-uyX"/>
+                        <viewControllerLayoutGuide type="bottom" id="trl-Wk-Fb2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jeX-c1-Mmg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="vu1-dM-ggK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7nf-xa-Co3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2424" y="1017"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ufK-fp-aIO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ms4-hL-NhX" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2P9-58-8ON">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="i0g-Ii-0LG" kind="relationship" relationship="rootViewController" id="NLp-kZ-ods"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cjN-RP-TYv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-523" y="909"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="menu" width="22" height="22"/>
+    </resources>
+    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
 </document>
