Rearranges and updates tab bar for MorTeam

--- a/MorTeam/Base.lproj/Main.storyboard
+++ b/MorTeam/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wce-dh-7hp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5284" y="4796"/>
+            <point key="canvasLocation" x="6096" y="4796"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="lbk-cT-eq9">
@@ -68,9 +68,9 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IWN-OZ-uEE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4468" y="4796"/>
+            <point key="canvasLocation" x="5280" y="4796"/>
         </scene>
-        <!--MorTeam-->
+        <!--Map-->
         <scene sceneID="EPg-SD-AEV">
             <objects>
                 <viewController id="l7c-vc-7u8" customClass="MapViewController" customModule="MorTeam" customModuleProvider="target" sceneMemberID="viewController">
@@ -127,7 +127,7 @@
                             <constraint firstItem="AKp-Ub-Dz2" firstAttribute="top" secondItem="JqS-2e-ysY" secondAttribute="bottom" id="swx-Ft-7N2"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="MorTeam" id="OyN-Ru-ibp"/>
+                    <navigationItem key="navigationItem" title="Map" id="OyN-Ru-ibp"/>
                     <connections>
                         <outlet property="MapUI" destination="AKp-Ub-Dz2" id="yxG-tc-XRE"/>
                         <outlet property="searchBar" destination="JqS-2e-ysY" id="FYz-aZ-6y0"/>
@@ -168,9 +168,10 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="lfr-XE-nfX" kind="relationship" relationship="viewControllers" id="Llo-Lb-Cve"/>
                         <segue destination="4eD-a2-zuf" kind="relationship" relationship="viewControllers" id="PnS-YP-0Wq"/>
                         <segue destination="NTB-yC-c4O" kind="relationship" relationship="viewControllers" id="FSA-uc-Xk4"/>
+                        <segue destination="BiL-xf-gcg" kind="relationship" relationship="viewControllers" id="59d-A2-XH9"/>
+                        <segue destination="lfr-XE-nfX" kind="relationship" relationship="viewControllers" id="Llo-Lb-Cve"/>
                         <segue destination="wyL-VE-W7e" kind="relationship" relationship="viewControllers" id="Var-fG-eFF"/>
                     </connections>
                 </tabBarController>
@@ -254,10 +255,10 @@
             </objects>
             <point key="canvasLocation" x="-132" y="2822"/>
         </scene>
-        <!--More-->
+        <!--Profile-->
         <scene sceneID="ce1-Aj-JAK">
             <objects>
-                <viewController id="mV7-4m-VgN" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Profile" id="mV7-4m-VgN" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="84C-aP-O84"/>
                         <viewControllerLayoutGuide type="bottom" id="OVa-ps-s5y"/>
@@ -267,17 +268,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="More" id="nBL-Dw-CBd"/>
+                    <navigationItem key="navigationItem" title="Profile" id="nBL-Dw-CBd"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JXX-mT-XtG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="682" y="3565"/>
         </scene>
-        <!--More-->
+        <!--Profile-->
         <scene sceneID="7VI-di-fza">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wyL-VE-W7e" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="More" image="menu" id="ZB3-ch-Q8U"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="menu" id="ZB3-ch-Q8U"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="eVx-F4-IYO">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -291,6 +292,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="COF-Oe-wxh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-130" y="3565"/>
+        </scene>
+        <!--Drive-->
+        <scene sceneID="Qko-wf-gCQ">
+            <objects>
+                <viewController id="kWi-gQ-1t5" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xOm-8M-rDY"/>
+                        <viewControllerLayoutGuide type="bottom" id="pYS-MO-cGG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="a03-af-yTr">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Drive" id="d2M-pY-Nwq"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S1D-hn-b3l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="682" y="4455"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RRt-Iu-rAA">
@@ -310,10 +330,30 @@
             </objects>
             <point key="canvasLocation" x="1386" y="1334"/>
         </scene>
+        <!--Drive-->
+        <scene sceneID="vnu-4f-wJU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BiL-xf-gcg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Drive" image="drive" id="BmR-iH-KF0"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aFJ-tH-3cC">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="kWi-gQ-1t5" kind="relationship" relationship="rootViewController" id="anf-1c-qjN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H60-6D-IjA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-130" y="4455"/>
+        </scene>
     </scenes>
     <resources>
         <image name="announcements" width="30" height="30"/>
         <image name="chat" width="30" height="30"/>
+        <image name="drive" width="30" height="30"/>
         <image name="map" width="30" height="30"/>
         <image name="menu" width="30" height="30"/>
     </resources>
